--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     /* width: 956px; */
     min-height: 1380px;
     /* height: 1380px; */
-    min-width: 320px;
+    min-width: 480px;
     margin: 0 auto;
     font-family: 'Roboto Condensed', sans-serif;
     color: #2d2d2d;
@@ -30,6 +30,10 @@
     line-height: 1.6;
     color: rgb(230, 230, 230);
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
+}
+
+.cv-owner {
+    padding: 10px;
 }
 
 .cv-owner h2 {
@@ -63,14 +67,13 @@
     border-bottom: 2px solid #2d3842;
     margin: 15px 0 10px;
     min-height: 40px;
-    padding-right: 75px;
 }
 
 .cv-header-social ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    margin: 0 auto;
+    margin-right: 75px;
 }
 
 .cv-header-social li {
@@ -183,9 +186,7 @@
     box-shadow: inset 6px 0px 5px -2px #00000094;
 }
 
-.contacts label,
-.portfolio label,
-.hobbies label {
+aside label {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
@@ -238,6 +239,7 @@
     padding-left: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .education p::before,
@@ -260,6 +262,7 @@
 
 .education span {
     min-width: 100px;
+    text-align: right;
 }
 
 .cv-footer {
@@ -355,15 +358,56 @@
     .cv-main aside article {
         margin-bottom: 0;
         padding: 10px;
+        text-align: center;
     }
 
     .hobbies,
-    .portfolio {
+    .language,
+    .hobbies,
+    .about-me {
         display: none;
     }
 
     .cv-content {
         width: 100%;
         box-shadow: none;
+        padding: 30px 10px 0 25px;
+    }
+
+    aside label {
+        justify-content: center;
+    }
+
+
+}
+
+@media screen and (max-width: 600px) {
+    .cv-main {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .cv-header {
+        flex-direction: column;
+    }
+
+    .cv-header h1 {
+        line-height: 1.4;
+    }
+
+    .cv-owner {
+        text-align: center;
+        padding-top: 0;
+        margin-top: -15px;
+    }
+
+    .cv-header-social ul {
+        justify-content: center;
+        margin-right: 0;
+    }
+
+    .button-block-line {
+        justify-content: space-around;
     }
 }
