--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,10 @@ aside label {
         width: 100%;
     }
 
+    aside label {
+        padding: 0 5px;
+    }
+
     .cv-main aside p {
         padding: 0 10px;
     }
@@ -395,9 +399,17 @@ aside label {
         background-color: #f6f6f6;
     }
 
-    aside label {
-        padding: 0 5px;
+
+    .contact-link-wrapper a img {
+        width: 60px;
     }
+
+    .contact-link-wrapper a:hover img {
+        width: 56px;
+        margin: 2px;
+    }
+
+
 
     .cv-footer {
         box-shadow: 0px -2px 4px #000000b5;
