--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 .wrapper {
     max-width: 960px;
-    min-height: 1380px;
+    min-height: 1360px;
     min-width: 420px;
     margin: 0 auto;
     font-family: 'Roboto Condensed', sans-serif;
@@ -119,7 +119,7 @@
 }
 
 .vacancy-description {
-    padding: 35px 5px 30px;
+    padding: 30px 5px 20px;
     text-align: center;
     background-color: #bcbcbc;
     font-size: 22px;
@@ -134,7 +134,7 @@
 
 .cv-main aside {
     width: 320px;
-    padding: 60px 15px 30px 20px;
+    padding: 40px 15px 30px 20px;
     box-sizing: border-box;
     order: 1;
     background-color: #f6f6f6;
@@ -142,7 +142,7 @@
 }
 
 .cv-main aside article {
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 .cv-main aside h3 {
@@ -151,6 +151,17 @@
     font-weight: bold;
     display: inline-block;
     border-bottom: 2px solid #2d2d2d59;
+}
+
+.link span {
+    font-size: 24px;
+    margin-bottom: 10px;
+    display: inline-block;
+    border-bottom: 2px solid #2d2d2d59;
+}
+
+.link span:hover {
+    border-bottom: 2px solid #b44328;
 }
 
 aside li {
@@ -173,25 +184,12 @@ aside img {
     vertical-align: bottom;
 }
 
-.portfolio a {
-    display: inline-block;
-    margin-top: 20px;
-    border-radius: 5px;
-    padding: 3px 15px;
-    box-shadow: 0px 0px 3px 1px #00000085;
-}
-
-.portfolio a:hover {
-    box-shadow: 0px 0px 2px 0px #000000c4;
-}
-
-aside .portfolio h3 {
-    border-bottom: none;
-    margin-bottom: 0;
+.link a {
+    display: block;
 }
 
 .cv-content {
-    padding: 40px 30px 0 45px;
+    padding: 35px 30px 0 45px;
     background-color: #e7e7e7;
     box-sizing: border-box;
     box-shadow: inset 6px 0px 5px -2px #00000094;
@@ -199,7 +197,7 @@ aside .portfolio h3 {
 }
 
 .cv-main .cv-content article {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .cv-content h3 {
@@ -270,7 +268,7 @@ aside .portfolio h3 {
 .cv-footer {
     background-color: #353c4c;
     background: linear-gradient(90deg, #111318 0%, #57627d 50%, #111318 100%);
-    padding: 5px 0 45px;
+    padding: 5px 0 50px;
 }
 
 .footer-contacts {
@@ -363,6 +361,10 @@ aside .portfolio h3 {
 
     .cv-main h3 {
         width: 100%;
+    }
+
+    .link {
+        text-align: center;
     }
 
     .cv-content {
