--- a/css/style.css
+++ b/css/style.css
@@ -155,13 +155,15 @@
 
 .link span {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     display: inline-block;
     border-bottom: 2px solid #2d2d2d59;
+    border-top: 2px solid #2d2d2d59;
 }
 
 .link span:hover {
     border-bottom: 2px solid #b44328;
+    border-top: 2px solid #b44328;
 }
 
 aside li {
@@ -355,16 +357,20 @@ aside img {
         display: inline-block;
     }
 
+    .link {
+        text-align: center;
+    }
+
+    .link span {
+        margin-top: 20px;
+    }
+
     .cv-main aside p {
         padding: 0 10px;
     }
 
     .cv-main h3 {
         width: 100%;
-    }
-
-    .link {
-        text-align: center;
     }
 
     .cv-content {
@@ -375,11 +381,11 @@ aside img {
     }
 
     .footer-contacts li a img {
-        width: 50px;
+        width: 55px;
     }
 
     .footer-contacts li a:hover img {
-        width: 46px;
+        width: 51px;
         margin: 2px;
     }
 
