--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 .wrapper {
     max-width: 960px;
-    min-height: 1360px;
+    /* min-height: 1360px; */
     min-width: 420px;
     margin: 0 auto;
     font-family: 'Roboto Condensed', sans-serif;
