--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ aside img {
 
 }
 
+.experience p,
 .education p,
 .courses p {
     padding: 5px 0;
@@ -221,6 +222,7 @@ aside img {
     align-items: center;
 }
 
+.experience p::before,
 .education p::before,
 .courses p::before {
     content: "";
