--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,10 @@ aside img {
     padding-left: 5px;
 }
 
+.cv-main .cv-content .professional-skill {
+    margin-bottom: 8px;
+}
+
 .professional-skill span {
     padding-left: 0;
 }
@@ -259,7 +263,7 @@ aside img {
 .professional-skill div {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-left: -15px;
     cursor: pointer;
 }
