--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+@import "./reset.css";
+
 @font-face {
-    font-family: 'Roboto Condensed';
-    src: url(../fonts/RobotoCondensed-Regular.ttf);
+    font-family : 'Roboto Condensed';
+    font-style  : normal;
+    src         : local('Roboto Condensed'), url(../fonts/RobotoCondensed-Regular.woff2) format('woff2');
+    font-display: swap;
 }
 
 .wrapper {
